# fw-sbom

./: CHANGELOG.md  Cargo.toml  README.md
src/: analyzer.rs  diff.rs  display.rs  elf_deep.rs  enrichment.rs  graph.rs  license.rs  main.rs  merge.rs  models.rs  sbom.rs  vex.rs
tests/: integration.rs
