[package]
name = "fw-sbom"
version = "0.1.0"
edition = "2021"
description = "Firmware SBOM generator and analyzer"
license = "MIT"
authors = ["isecwire GmbH"]

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
sha2 = "0.10"
walkdir = "2"
